Ninja: Fix command line limit when sysconf has no ARG_MAX

The `sysconf(3)` manual explains that the return value can be `-1` for
limits if there is no definite limit.  Recognize this case and skip
using the value as a limit candidate.  Otherwise we use response files
unconditionally on such systems instead of checking other limits.

Fixes: #16740